--- a/index.html
+++ b/index.html
@@ -44,8 +44,8 @@
             <li class="nav-item mx-0 mx-lg-1">
               <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#skills">Skills</a>
             </li>
-            <li class="nav-item mx-0 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#resume">Resume</a>
+			<li class="nav-item mx-0 mx-lg-1">
+              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#projects">Projects</a>
             </li>
           </ul>
         </div>
@@ -60,90 +60,29 @@
         <h2 class="font-weight-light mb-0">developer // creator // adventurer</h2>
       </div>
     </header>
-	
-	<!--
-    Portfolio Grid Section
-    <section class="portfolio" id="portfolio">
-      <div class="container">
-        <h2 class="text-center text-uppercase text-secondary mb-0">Portfolio</h2>
-        <hr class="star-dark mb-5">
-        <div class="row">
-          <div class="col-md-6 col-lg-4">
-            <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-1">
-              <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-                <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                  <i class="fa fa-search-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="img/portfolio/cabin.png" alt="">
-            </a>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-2">
-              <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-                <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                  <i class="fa fa-search-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="img/portfolio/cake.png" alt="">
-            </a>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-3">
-              <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-                <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                  <i class="fa fa-search-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="img/portfolio/circus.png" alt="">
-            </a>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-4">
-              <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-                <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                  <i class="fa fa-search-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="img/portfolio/game.png" alt="">
-            </a>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-5">
-              <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-                <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                  <i class="fa fa-search-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="img/portfolio/safe.png" alt="">
-            </a>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <a class="portfolio-item d-block mx-auto" href="#portfolio-modal-6">
-              <div class="portfolio-item-caption d-flex position-absolute h-100 w-100">
-                <div class="portfolio-item-caption-content my-auto w-100 text-center text-white">
-                  <i class="fa fa-search-plus fa-3x"></i>
-                </div>
-              </div>
-              <img class="img-fluid" src="img/portfolio/submarine.png" alt="">
-            </a>
-          </div>
-        </div>
-      </div>
-    </section>
-	-->
 
     <!-- About Section -->
-    <section class="bg-secondary text-white mb-0" id="about">
+    <section class="bg-secondary text-white mb-4" id="about">
       <div class="container">
         <h2 class="text-center text-black">About Me</h2>
         <hr class="primary">
         <div class="row">
           <div class="col-lg-4 ml-auto">
-            <p class="lead">Hey, I'm Benny! <br /> I recently graduated from Oregon State University with a degree in Computer Science. I love to solve problems and design useful stuff!</p>
+            <p class="lead">Hey, I'm Benny! <br /> I recently graduated from Oregon State University with a degree in Computer Science. I love creating things and solving problems through the medium of technology </p>
           </div>
           <div class="col-lg-4 mr-auto">
-            <p class="lead">On my free time I like to go on adventures, take pictures, and spend time with friends. Some of my favorite activies are skiing, hiking, and going to the beach!</p>
+            <p class="lead">On my free time I like to go on adventures, take pictures, and spend time with friends. Some of my favorite activities are skiing, hiking, and going to the beach!</p>
+		  </div>
+		  <div class="col-lg-4 mr-auto">
+		    <p class="lead">I am passionate about creating a life where I am constantly learning and improving that is feuled by my curiosity about life. I also love to travel and learn about new cultures! </p>
+		  </div>
+		</div>
+      </div>
+	  </br>
+	  <div class="container-fluid">
+        <div class="row">
+          <div class="col-md-12">
+            <img class="img-fluid" src="img/banner.png" alt="">
           </div>
         </div>
       </div>
@@ -194,14 +133,14 @@
         </div>
     </section>
 	
-	<!-- Resume Section -->
-    <section class="bg-secondary text-white mb-0" id="resume">
+	<!-- Projects section -->
+    <section class="bg-secondary text-white mb-0" id="projects">
       <div class="container">
-        <h2 class="text-center text-black">Take a look at my resume!</h2>
+        <h2 class="section-heading text-center">Projects</h2>
         <hr class="primary">
-			<div>
-				<button type="submit" class="btn btn-primary btn-xl center-block" id="sendMessageButton">Download</button>
-			</div
+        <div class="row">
+          <p> Stay Tuned! </p>
+        </div>
       </div>
     </section>
 
@@ -209,7 +148,7 @@
     <footer class="footer text-center">
       <div class="container">
         <div class="row">
-          <div class="col-md-4 mb-5 mb-lg-0">
+          <div class="col-md-6 mb-5 mb-lg-0">
             <h4 class="text-uppercase mb-4">Connect with me</h4>
             <ul class="list-inline mb-0">
               <li class="list-inline-item">
@@ -223,28 +162,35 @@
                 </a>
               </li>
               <li class="list-inline-item">
-                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="www.linkedin.com/in/benjamin-wick">
+                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="https://www.linkedin.com/in/benjamin-wick">
                   <i class="fa fa-fw fa-linkedin"></i>
+                </a>
+              </li>
+			  <li class="list-inline-item">
+                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="https://github.com/bwick04/">
+                  <i class="fa fa-fw fa-github"></i>
                 </a>
               </li>
             </ul>
           </div>
-          <div class="col-md-4">
-            <h4 class="text-uppercase mb-4">About Freelancer</h4>
-            <p class="lead mb-0">Freelance is a free to use, open source Bootstrap theme created by
-              <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
-          </div>
+		  
+		  <div class="col-md-6 mb-5 mb-lg-0">
+			<h4 class="text-uppercase mb-4">Check out my resume</h4>
+		  		<form method="get" action="resume.pdf">
+					<button type="submit" class="fa fa-file btn btn-primary btn-xl" id="sendMessageButton"> View PDF</button>
+				</form>
+		  </div>
+		  
         </div>
       </div>
     </footer>
 
-	<!--  Copyright Info
+	<!--  Copyright Info -->
     <div class="copyright py-4 text-center text-white">
       <div class="container">
-        <small>Copyright &copy; Your Website 2018</small>
+        <small>Copyright &copy; Benny Wick 2018 // developer & creator</small>
       </div>
     </div>
-	-->
 
     <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
     <div class="scroll-to-top d-lg-none position-fixed ">
