--- a/index.html
+++ b/index.html
@@ -1,219 +1,218 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <head>
+<head>
 
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+  <meta name="description" content="">
+  <meta name="author" content="">
 
-    <title>Benny Wick</title>
+  <title>Benny Wick</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Bootstrap core CSS -->
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom fonts for this template -->
-    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
-    <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
+  <!-- Custom fonts for this template -->
+  <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic" rel="stylesheet" type="text/css">
 
-    <!-- Plugin CSS -->
-    <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet" type="text/css">
+  <!-- Plugin CSS -->
+  <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet" type="text/css">
 
-    <!-- Custom styles for this template -->
-    <link href="css/freelancer.css" rel="stylesheet">
+  <!-- Custom styles for this template -->
+  <link href="css/freelancer.css" rel="stylesheet">
 
-  </head>
+</head>
 
-  <body id="page-top">
+<body id="page-top">
 
-    <!-- Navigation -->
-    <nav class="navbar navbar-expand-lg bg-third fixed-top text-uppercase" id="mainNav">
-      <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="#page-top">Benny Wick</a>
-        <button class="navbar-toggler navbar-toggler-right text-uppercase bg-third text-white rounded" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-          Menu
-          <i class="fa fa-bars"></i>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarResponsive">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item mx-0 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">About</a>
+  <!-- Navigation -->
+  <nav class="navbar navbar-expand-lg bg-third fixed-top text-uppercase" id="mainNav">
+    <div class="container">
+      <a class="navbar-brand js-scroll-trigger" href="#page-top">Benny Wick</a>
+      <button class="navbar-toggler navbar-toggler-right text-uppercase bg-third text-white rounded" type="button"
+        data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+        aria-label="Toggle navigation">
+        Menu
+        <i class="fa fa-bars"></i>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item mx-0 mx-lg-1">
+            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#about">About</a>
+          </li>
+          <li class="nav-item mx-0 mx-lg-1">
+            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#skills">Skills</a>
+          </li>
+          <li class="nav-item mx-0 mx-lg-1">
+            <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#projects">Projects</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!-- Header -->
+  <header class="masthead bg-primary text-black text-center">
+    <div class="container">
+      <img class="img-fluid mb-5 d-block mx-auto" src="img/profile.jpg" alt="">
+      <h1 class="mb-3">Benny Wick</h1>
+      <h2 class="font-weight-light mb-0">developer // creator // adventurer</h2>
+    </div>
+  </header>
+
+  <!-- About Section -->
+  <section class="bg-secondary text-white mb-4" id="about">
+    <div class="container">
+      <h2 class="text-center text-black">About Me</h2>
+      <hr class="primary">
+      <div class="row">
+        <div class="col-lg-6 ml-auto">
+          <p class="lead">Welcome to my site! <br /> My name is Benny and I am a proud graduate from Oregon State
+            University with a degree in
+            Computer Science. I love creating things and solving problems <br />
+            I have a strong interest in mobile and web development and also love design and aesthetically pleasing user
+            interfaces.</p>
+        </div>
+        <div class="col-lg-6 mr-auto">
+          <p class="lead">On my free time I like to go on adventures, travel, take pictures, and spend time with
+            friends. Some
+            of my favorite activities include skiing, hiking, and going to the beach!</p>
+        </div>
+      </div>
+    </div>
+    <br />
+    <br />
+    <img src="img/banner.png" class="img-fluid">
+  </section>
+
+  <!-- Skills Section -->
+  <section id="skills">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-12 text-center text-black">
+          <h2 class="section-heading">Skills</h2>
+          <hr class="primary">
+        </div>
+      </div>
+    </div>
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-4 col-md-6 text-center">
+          <div class="service-box">
+            <i class="fa fa-4x fa-code wow bounceIn text-primary"></i>
+            <h3>Languages</h3>
+            <p> Java <br />
+              JavaScript <br />
+              CSS / HTML <br />
+              MySQL </p>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 text-center">
+          <div class="service-box">
+            <i class="fa fa-4x fa-database wow bounceIn text-primary" data-wow-delay=".2s"></i>
+            <h3>Frameworks</h3>
+            <p> React <br />
+              Bootstrap </p>
+          </div>
+        </div>
+        <div class="col-lg-4 col-md-6 text-center">
+          <div class="service-box">
+            <i class="fa fa-4x fa-server bounceIn text-primary" data-wow-delay=".1s"></i>
+            <h3>Tools</h3>
+            <p> JIRA <br />
+              Github <br />
+              Android Studio <br />
+              Adobe Photoshop/Lightroom </p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <!-- Projects section -->
+  <section class="bg-secondary text-white mb-0" id="projects">
+    <div class="container">
+      <h2 class="section-heading text-center">Projects</h2>
+      <hr class="primary">
+      <div class="row">
+        <p> Stay Tuned! </p>
+      </div>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="footer text-center">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-6 mb-5 mb-lg-0">
+          <h4 class="text-uppercase mb-4">Connect with me</h4>
+          <ul class="list-inline mb-0">
+            <li class="list-inline-item">
+              <a class="btn btn-outline-light btn-social text-center rounded-circle" href="https://www.facebook.com/benjamin.a.wick">
+                <i class="fa fa-fw fa-facebook"></i>
+              </a>
             </li>
-            <li class="nav-item mx-0 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#skills">Skills</a>
+            <li class="list-inline-item">
+              <a class="btn btn-outline-light btn-social text-center rounded-circle" href="https://www.instagram.com/bwick.ii/">
+                <i class="fa fa-fw fa-instagram"></i>
+              </a>
             </li>
-			<li class="nav-item mx-0 mx-lg-1">
-              <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#projects">Projects</a>
+            <li class="list-inline-item">
+              <a class="btn btn-outline-light btn-social text-center rounded-circle" href="https://www.linkedin.com/in/benjamin-wick">
+                <i class="fa fa-fw fa-linkedin"></i>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a class="btn btn-outline-light btn-social text-center rounded-circle" href="https://github.com/bwick04/">
+                <i class="fa fa-fw fa-github"></i>
+              </a>
             </li>
           </ul>
         </div>
-      </div>
-    </nav>
 
-    <!-- Header -->
-    <header class="masthead bg-primary text-black text-center">
-      <div class="container">
-        <img class="img-fluid mb-5 d-block mx-auto" src="img/profile.png" alt="">
-        <h1 class="mb-3">Benny Wick</h1>
-        <h2 class="font-weight-light mb-0">developer // creator // adventurer</h2>
-      </div>
-    </header>
+        <div class="col-md-6 mb-5 mb-lg-0">
+          <h4 class="text-uppercase mb-4">Check out my resume</h4>
+          <form method="get" action="resume.pdf">
+            <button type="submit" class="fa fa-file btn btn-primary btn-xl" id="sendMessageButton"> View PDF</button>
+          </form>
+        </div>
 
-    <!-- About Section -->
-    <section class="bg-secondary text-white mb-4" id="about">
-      <div class="container">
-        <h2 class="text-center text-black">About Me</h2>
-        <hr class="primary">
-        <div class="row">
-          <div class="col-lg-4 ml-auto">
-            <p class="lead">Hey, I'm Benny! <br /> I recently graduated from Oregon State University with a degree in Computer Science. I love creating things and solving problems through the medium of technology </p>
-          </div>
-          <div class="col-lg-4 mr-auto">
-            <p class="lead">On my free time I like to go on adventures, take pictures, and spend time with friends. Some of my favorite activities are skiing, hiking, and going to the beach!</p>
-		  </div>
-		  <div class="col-lg-4 mr-auto">
-		    <p class="lead">I am passionate about creating a life where I am constantly learning and improving that is feuled by my curiosity about life. I also love to travel and learn about new cultures! </p>
-		  </div>
-		</div>
-      </div>
-	  </br>
-	  <div class="container-fluid">
-        <div class="row">
-          <div class="col-md-12">
-            <img class="img-fluid" src="img/banner.png" alt="">
-          </div>
-        </div>
-      </div>
-    </section>
-	
-	<!-- Skills Section -->
-	<section id="skills">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center text-black">
-                    <h2 class="section-heading">Skills</h2>
-                    <hr class="primary">
-                </div>
-            </div>
-        </div>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-4 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-code wow bounceIn text-primary"></i>
-                        <h3>Languages</h3>
-                            <p> Java <br />
-							C# <br />
-							C / C++ <br />
-							SQL / MySQL <br />
-                            CSS / HTML </p>              
-                    </div>
-                </div>
-				<div class="col-lg-4 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-database wow bounceIn text-primary" data-wow-delay=".2s"></i>
-                        <h3>Frameworks</h3>
-                            <p> ASP.NET <br />
-							Bootstrap </p>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-md-6 text-center">
-                    <div class="service-box">
-                        <i class="fa fa-4x fa-server bounceIn text-primary" data-wow-delay=".1s"></i>
-                        <h3>Technologies</h3>
-                            <p> Microsoft Visual Studio <br />
-							Microsoft Dynamics <br />
-							Git / TFS <br />
-							Android Studio </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-	
-	<!-- Projects section -->
-    <section class="bg-secondary text-white mb-0" id="projects">
-      <div class="container">
-        <h2 class="section-heading text-center">Projects</h2>
-        <hr class="primary">
-        <div class="row">
-          <p> Stay Tuned! </p>
-        </div>
-      </div>
-    </section>
-
-    <!-- Footer -->
-    <footer class="footer text-center">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6 mb-5 mb-lg-0">
-            <h4 class="text-uppercase mb-4">Connect with me</h4>
-            <ul class="list-inline mb-0">
-              <li class="list-inline-item">
-                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="https://www.facebook.com/benjamin.a.wick">
-                  <i class="fa fa-fw fa-facebook"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="https://www.instagram.com/bwick.ii/">
-                  <i class="fa fa-fw fa-instagram"></i>
-                </a>
-              </li>
-              <li class="list-inline-item">
-                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="https://www.linkedin.com/in/benjamin-wick">
-                  <i class="fa fa-fw fa-linkedin"></i>
-                </a>
-              </li>
-			  <li class="list-inline-item">
-                <a class="btn btn-outline-light btn-social text-center rounded-circle" href="https://github.com/bwick04/">
-                  <i class="fa fa-fw fa-github"></i>
-                </a>
-              </li>
-            </ul>
-          </div>
-		  
-		  <div class="col-md-6 mb-5 mb-lg-0">
-			<h4 class="text-uppercase mb-4">Check out my resume</h4>
-		  		<form method="get" action="resume.pdf">
-					<button type="submit" class="fa fa-file btn btn-primary btn-xl" id="sendMessageButton"> View PDF</button>
-				</form>
-		  </div>
-		  
-        </div>
-      </div>
-    </footer>
-
-	<!--  Copyright Info -->
-    <div class="copyright py-4 text-center text-white">
-      <div class="container">
-        <small>Copyright &copy; Benny Wick 2018 // developer & creator</small>
       </div>
     </div>
+  </footer>
 
-    <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
-    <div class="scroll-to-top d-lg-none position-fixed ">
-      <a class="js-scroll-trigger d-block text-center text-white rounded" href="#page-top">
-        <i class="fa fa-chevron-up"></i>
-      </a>
+  <!--  Copyright Info -->
+  <div class="copyright py-4 text-center text-white">
+    <div class="container">
+      <small>Copyright &copy; Benny Wick 2018 // developer & creator</small>
     </div>
+  </div>
 
-    <!-- Bootstrap core JavaScript -->
-    <script src="vendor/jquery/jquery.min.js"></script>
-    <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
+  <div class="scroll-to-top d-lg-none position-fixed ">
+    <a class="js-scroll-trigger d-block text-center text-white rounded" href="#page-top">
+      <i class="fa fa-chevron-up"></i>
+    </a>
+  </div>
 
-    <!-- Plugin JavaScript -->
-    <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
-    <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
+  <!-- Bootstrap core JavaScript -->
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
-    <!-- Contact Form JavaScript -->
-    <script src="js/jqBootstrapValidation.js"></script>
-    <script src="js/contact_me.js"></script>
+  <!-- Plugin JavaScript -->
+  <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
+  <script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
 
-    <!-- Custom scripts for this template -->
-    <script src="js/freelancer.min.js"></script>
+  <!-- Contact Form JavaScript -->
+  <script src="js/jqBootstrapValidation.js"></script>
+  <script src="js/contact_me.js"></script>
 
-  </body>
+  <!-- Custom scripts for this template -->
+  <script src="js/freelancer.min.js"></script>
+
+</body>
 
 </html>
