--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
   <!-- Header -->
   <header class="masthead bg-primary text-black text-center">
     <div class="container">
-      <img class="img-fluid mb-5 d-block mx-auto" src="img/profile.jpg" alt="">
+      <img class="img-fluid mb-5 d-block mx-auto" src="img/profile.png" alt="">
       <h1 class="mb-3">Benny Wick</h1>
       <h2 class="font-weight-light mb-0">developer // creator // adventurer</h2>
     </div>
